# visionary

./: .gitignore  .gitmodules  readme.md
cpp/prototypes/v1/VisionaryProto1/: LiveCamera.cpp  VisionaryProto1.sln  VisionaryProto1.vcxproj  VisionaryProto1.vcxproj.filters
cpp/prototypes/v1/VisionaryProto1/x64/Debug/: VisionaryProto1.exe.recipe
old/: readme.md
old/cpp/prototypes/v1/VisionaryProto1/: LiveCamera.cpp  LiveCamera.h  StaticImage.cpp  StaticImage.h  VisionaryProto1.vcxproj  main.cpp
old/cpp/prototypes/v1/VisionaryProto1/x64/Debug/: VisionaryProto1.vcxproj.FileListAbsolute.txt
old/cpp/prototypes/v1/VisionaryProto1/x64/Release/: VisionaryProto1.exe.recipe  VisionaryProto1.iobj  VisionaryProto1.ipdb  VisionaryProto1.vcxproj.FileListAbsolute.txt
old/cpp/prototypes/v3/tES2/: tES2.sln  tES2.vcxproj
old/python/proto/: camera-v8-opencv.py
python/build-models/: build-model.py
python/proto/: build-model.py  camera-v8-cuda-ul.py  static-img-v5-opencv.py
src/: .gitignore  CMakeLists.txt  OCSortTracker.cpp  OCSortTracker.h  OneCamera.cpp  OneCamera.h  StereoCamera.cpp  StereoCamera.h  StereoMatcher.cpp  StereoMatcher.h  YoloDetector.cpp  YoloDetector.h  hungarian.cpp  main.cpp
